Project on Symfony 5

--- a/.docker/conf/mysql/my.cnf
+++ b/.docker/conf/mysql/my.cnf
@@ -23,7 +23,7 @@
 # https://dev.mysql.com/doc/refman/5.7/en/mysql-command-options.html
 
 [mysqld]
-bind-address = '*'
+bind-address = 0.0.0.0
 
 !includedir /etc/mysql/conf.d/
 !includedir /etc/mysql/mysql.conf.d/
