--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
         # Build only once, then use local image
         #build: .docker
         image: symfony5
-        container_name: symfony_apache
         restart: always
         working_dir: /var/www
         ports: 
             - 88:80
         environment: 
             DATABASE_MYSQL_URL: mysql://user:pass@mysql:3306/mydb
-            DATABASE_POSTGRES_URL: postgres://user:pass@postgres:5432/pgdb
+            DATABASE_POSTGRES_URL: postgres://user:pass@postgres:5432/pgdb7
+            RABBITMQ_DSN: amqp://guest:guest@rabbitmq:5672
         volumes:
             ##################################################
             # GIT BRANCHES SHOULD BE PULLED INSIDE CONTAINER #
@@ -21,6 +21,7 @@ services:
 
             # HOME
             - ${DIRECTORY}/.docker/.home/.bashrc:/root/.bashrc
+            - ${DIRECTORY}/.docker/.home/.bash-aliases:/root/.bash-aliases
             - ${DIRECTORY}/.docker/.home/.gitconfig:/root/.gitconfig
             - ${DIRECTORY}/.docker/.home/user-prompt.sh:/root/user-prompt.sh
             - ${DIRECTORY}/.docker/.home/prompt:/root/prompt
@@ -29,6 +30,7 @@ services:
 
             # used to update local config in needed (like .docker)
             - ${DIRECTORY}:/SYMFONY
+            - ${DIRECTORY}/.docker/conf/php/99-blackfire.ini:/usr/local/etc/php/conf.d/99-blackfire.ini
 
             - ${DIRECTORY}/.docker/conf/httpd/000-default.conf:/etc/apache2/sites-available/000-default.conf:ro
             - vscode-server:/root/.vscode-server
@@ -37,7 +39,6 @@ services:
 
     mysql:
         image: mysql:5.6
-        container_name: symfony_mysql
         restart: always
         environment:
             MYSQL_ROOT_PASSWORD: root
@@ -45,7 +46,7 @@ services:
             MYSQL_PASSWORD: pass
             MYSQL_DATABASE: mydb
         # For Windows users
-        command: "--innodb_use_native_aio=0"
+        #command: "--innodb_use_native_aio=0"
         volumes:
             - ${DIRECTORY}/.docker/conf/mysql/my.cnf:/etc/mysql/my.cnf:ro
             - mysql:/var/lib/mysql/
@@ -57,7 +58,6 @@ services:
     # https://hub.docker.com/_/postgres
     postgres:
         build: .docker/postgres
-        container_name: symfony_postgres
         restart: always
         environment:
             POSTGRES_USER: user
@@ -75,9 +75,22 @@ services:
 
     # https://hub.docker.com/_/rabbitmq
     rabbitmq:
-        build: .docker/rabbitmq
-        container_name: symfony_rabbitmq
+        image: rabbitmq:3.8-management
         restart: always
+        ports: 
+            #[5672, 15672]
+            - 5672:5672
+            - 15672:15672
+        networks:
+            - sym
+
+    phpmyadmin:
+        image: phpmyadmin
+        restart: always
+        ports:
+            - 8088:80
+        environment:
+            PMA_ARBITRARY: 1
         networks:
             - sym
 
@@ -87,7 +100,7 @@ services:
     ######
     pgadmin: 
         image: dpage/pgadmin4
-        container_name: symfony_pgadmin
+        restart: always
         environment: 
             # https://www.pgadmin.org/docs/pgadmin4/latest/container_deployment.html
             PGADMIN_DEFAULT_EMAIL: admin@local.host
@@ -99,7 +112,35 @@ services:
             - ${DIRECTORY}/.docker/conf/pgadmin/servers.json:/pgadmin4/servers.json
             # https://www.postgresql.org/docs/9.1/libpq-pgpass.html
         ports: 
-            - 8888:80
+            - 8087:80
+        networks:
+            - sym
+
+    redis:
+        image: redis:6.2-alpine
+        ports:
+            - 6379:6379
+        networks:
+            - sym
+
+    redis-gui:
+        image: marian/rebrow
+        restart: always
+        ports:
+            - 5001:5001
+        networks:
+            - sym
+
+    mailer:
+        image: schickling/mailcatcher
+        ports: [1025, 1080]
+        networks:
+            - sym
+
+    blackfire:
+        image: blackfire/blackfire
+        env_file: .env.local
+        ports: [8707]
         networks:
             - sym
 
