sentry and messenger

--- a/.env
+++ b/.env
@@ -15,7 +15,11 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=5595d4403b6b2096b630d7674a6087da
+APP_SECRET=secret
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
+
+###> sentry/sentry-symfony ###
+SENTRY_DSN=
+###< sentry/sentry-symfony ###
