--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "sentry/sentry-symfony": "^4.2",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/messenger": "5.0.*",
         "symfony/yaml": "5.0.*"
-    },
-    "require-dev": {
     },
     "config": {
         "preferred-install": {
