--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,19 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.13",
+        "predis/predis": "^1.1",
         "sentry/sentry-symfony": "^4.2",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/maker-bundle": "^1.36",
         "symfony/messenger": "5.0.*",
-        "symfony/yaml": "5.0.*"
+        "symfony/twig-bundle": "5.0.*",
+        "symfony/yaml": "5.0.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "preferred-install": {
