--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "symfony/messenger": "5.0.*",
         "symfony/twig-bundle": "5.0.*",
         "symfony/yaml": "5.0.*",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/extra-bundle": "^3.0",
+        "twig/twig": "^3.0"
     },
     "config": {
         "preferred-install": {
