--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,7 +2,7 @@
 # Files in the packages/ subdirectory configure your dependencies.
 
 imports:
-    - { resource: redis.yml }
+    - { resource: services/redis.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -12,7 +12,7 @@ services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        autoconfigure: false # Automatically registers your services as commands, event subscribers, etc.
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -24,7 +24,11 @@ services:
             # - '../src/DependencyInjection/'
             # - '../src/Entity/'
 
-            - '../src/Infrastructure/' # manually imported
+            #####################
+            # manually imported #
+            #####################
+            - '../src/Domain/**/*Handler'
+            - '../src/Infrastructure/' 
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
