--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,11 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.11.99.4",
         "doctrine/annotations": "^1.13",
+        "doctrine/doctrine-bundle": "^2.3",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.10",
         "predis/predis": "^1.1",
         "sentry/sentry-symfony": "^4.2",
         "symfony/console": "5.0.*",
@@ -14,6 +18,7 @@
         "symfony/framework-bundle": "5.0.*",
         "symfony/maker-bundle": "^1.36",
         "symfony/messenger": "5.0.*",
+        "symfony/proxy-manager-bridge": "5.0.*",
         "symfony/twig-bundle": "5.0.*",
         "symfony/yaml": "5.0.*",
         "twig/extra-bundle": "^3.0",
