--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/framework-bundle": "5.0.*",
         "symfony/maker-bundle": "^1.36",
         "symfony/messenger": "5.0.*",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/proxy-manager-bridge": "5.0.*",
         "symfony/twig-bundle": "5.0.*",
         "symfony/yaml": "5.0.*",
@@ -69,5 +70,10 @@
             "allow-contrib": false,
             "require": "5.0.*"
         }
+    },
+    "require-dev": {
+        "symfony/debug-bundle": "5.0.*",
+        "symfony/stopwatch": "5.0.*",
+        "symfony/web-profiler-bundle": "5.0.*"
     }
 }
