fix LazyLoadingValueHolderGenerator with Laminas

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
+        "laminas/laminas-code": "^3.4",
         "predis/predis": "^1.1",
         "sentry/sentry-symfony": "^4.2",
         "symfony/console": "5.0.*",
