--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,12 @@
 {
     "type": "project",
     "license": "proprietary",
+    "config": {
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    },
     "require": {
         "php": "^7.2.5",
         "ext-ctype": "*",
@@ -13,26 +19,47 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
         "laminas/laminas-code": "^3.4",
+        "phpdocumentor/reflection-docblock": "^5.3",
         "predis/predis": "^1.1",
+        "sensio/framework-extra-bundle": "^5.5",
         "sentry/sentry-symfony": "^4.2",
+        "symfony/asset": "5.0.*",
+        "symfony/config": "5.0.*",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
+        "symfony/event-dispatcher": "5.0.*",
+        "symfony/expression-language": "5.0.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
-        "symfony/maker-bundle": "^1.36",
+        "symfony/mailer": "5.0.*",
         "symfony/messenger": "5.0.*",
         "symfony/monolog-bundle": "^3.0",
+        "symfony/options-resolver": "5.0.*",
+        "symfony/process": "5.0.*",
+        "symfony/property-access": "5.0.*",
+        "symfony/property-info": "5.0.*",
         "symfony/proxy-manager-bridge": "5.0.*",
+        "symfony/security-bundle": "5.0.*",
+        "symfony/serializer": "5.0.*",
+        "symfony/translation": "5.0.*",
         "symfony/twig-bundle": "5.0.*",
+        "symfony/validator": "5.0.*",
+        "symfony/web-link": "5.0.*",
         "symfony/yaml": "5.0.*",
         "twig/extra-bundle": "^3.0",
         "twig/twig": "^3.0"
     },
-    "config": {
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true
+    "require-dev": {
+        "phpunit/phpunit": "^6.5",
+        "symfony/browser-kit": "5.0.*",
+        "symfony/css-selector": "5.0.*",
+        "symfony/debug-bundle": "5.0.*",
+        "symfony/maker-bundle": "^1.36",
+        "symfony/phpunit-bridge": "5.0.*",
+        "symfony/stopwatch": "5.0.*",
+        "symfony/var-dumper": "5.0.*",
+        "symfony/web-profiler-bundle": "5.0.*"
     },
     "autoload": {
         "psr-4": {
@@ -73,10 +100,5 @@
             "allow-contrib": false,
             "require": "5.0.*"
         }
-    },
-    "require-dev": {
-        "symfony/debug-bundle": "5.0.*",
-        "symfony/stopwatch": "5.0.*",
-        "symfony/web-profiler-bundle": "5.0.*"
     }
 }
