--- a/config/services_config.yml
+++ b/config/services_config.yml
@@ -1,8 +1,7 @@
 services:
     rot13:
         class:    App\Application\Service\Rot13Transformer
-        arguments: 
-            $transform: false
+        arguments: [false]
     
     twitter_client:
         class:    App\Application\Service\TwitterClient
