--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,9 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+redirect:
+    path: /old-path
+    controller: 'Symfony\Bundle\FrameworkBundle\Controller\RedirectController'
+    defaults:
+        path: /new-path
