--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,11 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
         "jetbrains/phpstorm-stubs": "^2021.3",
+        "koenhoeijmakers/headers": "^1.0",
         "laminas/laminas-code": "^3.4",
         "phpdocumentor/reflection-docblock": "^5.3",
         "predis/predis": "^1.1",
+        "ralouphie/getallheaders": "^3.0",
         "sensio/framework-extra-bundle": "^6.2",
         "sentry/sentry-symfony": "^4.2",
         "symfony/asset": "5.0.*",
