--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 imports:
     - { resource: services_config.yml }
     - { resource: services/redis.yml }
+    - { resource: services/knp/knp_menu.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
