--- a/config/services/knp/knp_menu.yml
+++ b/config/services/knp/knp_menu.yml
@@ -13,7 +13,7 @@ knp_menu:
 
 services:
     app.menu_builder:
-        class: App\Application\Service\KnpMenuBuilder
+        class: App\Application\Service\MenuBuilder
         arguments: ["@knp_menu.factory", "@router"]
         tags:
             - { name: knp_menu.menu_builder, method: createMainMenu, alias: main } # The alias is what is used to retrieve the menu
