--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,2 +1,8 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    form_themes: 
+        - form_div_layout.html.twig # default
+    number_format:
+        decimals: 0
+        decimal_point: .
+        thousands_separator: ','
