--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,7 +1,10 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    
     form_themes: 
         - form_div_layout.html.twig # default
+    #form_themes: ['bootstrap_5_horizontal_layout.html.twig']
+    
     number_format:
         decimals: 0
         decimal_point: .
