--- a/config/services/knp/knp_menu.yml
+++ b/config/services/knp/knp_menu.yml
@@ -3,7 +3,7 @@
 knp_menu:
     # use "twig: false" to disable the Twig extension and the TwigRenderer
     twig:
-        template: menu/knp_menu.html.twig
+        template: my_knp_menu.html.twig
 
     #  if true, enables the helper for PHP templates
     templating: false
