--- a/config/services.yaml
+++ b/config/services.yaml
@@ -9,6 +9,8 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    a: "%%b%%" # will output "%b%"
+    b: "%a%%"  # will output "%b%%"
 
 services:
     # default configuration for services in *this* file
