insert ext bundle

--- a/.env.dist
+++ b/.env.dist
@@ -7,6 +7,12 @@ DIRECTORY=/WEBSERVER/symfony5
 
 # REDIS_DSN=
 
+# external bundle cylmat/phpext #
+# 0 use bundle with symfony
+# 1 use bundle as a standalone
+SWITCH_PHPEXT=
+# external bundle cylmat/phpext #
+
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=doctrine://default
