--- a/.env
+++ b/.env
@@ -13,6 +13,10 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+# external bundle cylmat/phpext #
+SWITCH_PHPEXT=0
+# external bundle cylmat/phpext #
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=secret
