--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.3.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.*",
@@ -68,7 +68,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Bundle\\": "Bundle/"
         }
     },
     "autoload-dev": {
