--- a/config/services.yaml
+++ b/config/services.yaml
@@ -41,5 +41,8 @@ services:
         resource: '../src/Application/Controller/'
         tags: ['controller.service_arguments']
 
+    Bundle\ExtBundleController:
+        tags: ['controller.service_arguments']
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
