--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,12 @@
         "koenhoeijmakers/headers": "^1.0",
         "laminas/laminas-code": "^3.4",
         "phpdocumentor/reflection-docblock": "^5.3",
+        "phpro/grumphp": "^1.5",
         "predis/predis": "^1.1",
         "ralouphie/getallheaders": "^3.0",
         "sensio/framework-extra-bundle": "^6.2",
         "sentry/sentry-symfony": "^4.2",
+        "squizlabs/php_codesniffer": "^3.6",
         "symfony/asset": "5.0.*",
         "symfony/config": "5.0.*",
         "symfony/console": "5.0.*",
