--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/",
+            "": "src/",
+            "App\\Application\\": "src/Application/",
+            "App\\Domain\\": "src/Domain/",
+            "App\\Infrastructure\\": "src/Infrastructure/",
             "Bundle\\": "Bundle/"
         }
     },
