--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
 # define your env variables for the test env here
-KERNEL_CLASS='App\Kernel'
+KERNEL_CLASS=App\Kernel
 APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
@@ -8,4 +8,4 @@ PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 SENTRY_DSN=
 REDIS_DSN=
 MESSENGER_TRANSPORT_DSN=
-DATABASE_URL=
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/data3.db"
