--- a/.env
+++ b/.env
@@ -25,10 +25,10 @@ APP_SECRET=secret
 ###< symfony/framework-bundle ###
 
 ###> sentry/sentry-symfony ###
-# SENTRY_DSN=
+SENTRY_DSN=
 ###< sentry/sentry-symfony ###
 
-# REDIS_DSN=
+REDIS_DSN=
 
 ###> symfony/messenger ###
 # Choose one of the transports below
