--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
       # --no-plugins avoid to install grumphp's git hook
       env:
         APP_ENV: prod # post-install-cmd
-      run: composer install --prefer-dist --no-cache --no-progress --no-dev
+      run: composer install --prefer-dist --no-cache --no-plugins --no-progress --no-dev
 
     - name: Tests
       run: make tests
