--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,10 +49,9 @@ jobs:
 
     - name: Install composer dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
-      # --no-plugins avoid to install grumphp's git hook
       env:
         APP_ENV: prod # post-install-cmd
-      run: composer install --prefer-dist --no-cache --no-plugins --no-progress --no-dev
+      run: composer install --prefer-dist --no-cache --no-progress --no-dev
 
     - name: Tests
       run: make tests
