--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,9 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         coverage: xdebug
-        extensions: curl, gd, intl, mbstring, opcache, sockets, sodium, xsl, zip
+        extensions: |
+          curl, gd, intl, mbstring, pdo_sqlite
+          opcache, sqlite3, sockets, sodium, xsl, zip
         php-version: "7.3"
 
     - name: Symfony cli
