--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -4,6 +4,8 @@ doctrine:
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
+        # and
+        # Avoid error in cache:clear
         server_version: 3
     orm:
         auto_generate_proxy_classes: true
