--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,4 +56,4 @@ jobs:
       run: composer install --prefer-dist --no-cache --no-progress
 
     - name: Tests
-      run: make tests
+      run: vendor/bin/phpunit
