--- a/config/services.yaml
+++ b/config/services.yaml
@@ -17,6 +17,7 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        public: false
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -34,6 +35,13 @@ services:
             - '../src/Application/Service/'
             - '../src/Domain/**/*Handler'
             - '../src/Infrastructure/'
+
+            ################
+            # Not imported #
+            ################
+            - '../src/Application/Response.php'
+            - '../src/Domain/Message/*'
+            - '../src/Domain/Model/*'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
