--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "koenhoeijmakers/headers": "^1.0",
         "laminas/laminas-code": "^3.4",
         "phpdocumentor/reflection-docblock": "^5.3",
+        "phpmd/phpmd": "^2.11",
         "predis/predis": "^1.1",
         "ralouphie/getallheaders": "^3.0",
         "sensio/framework-extra-bundle": "^6.2",
@@ -57,6 +58,7 @@
     "require-dev": {
         "jetbrains/phpstorm-stubs": "^2021.3",
         "phpro/grumphp": "^1.5",
+        "phpstan/phpstan": "^1.3",
         "phpunit/phpunit": "^6.5",
         "squizlabs/php_codesniffer": "^3.6",
         "symfony/browser-kit": "5.0.*",
