--- a/config/services_config.yml
+++ b/config/services_config.yml
@@ -6,6 +6,7 @@ services:
     twitter_client:
         class:    App\Application\Service\TwitterClient
         autowire: true
+        tags: ['app.test']
         calls:
             # the TRUE argument turns this into a wither method
             # vendor/symfony/dependency-injection/Compiler/AutowirePass.php 
@@ -15,6 +16,9 @@ services:
     # Aliases HAVE to be manually declared to type-hint
     App\Application\Service\Rot13Transformer: '@rot13'
     App\Application\Service\TwitterClient: '@twitter_client'
+
+    App\Application\Service\TwitterClientChild:
+        parent: App\Application\Service\TwitterClient
 
     ########################
     # SAMPLE AND DECORATOR #
