--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -2,6 +2,12 @@ controllers:
     resource: ../../src/Application/Controller/
     type: annotation
 
+    # Route groups:
+    prefix: 
+        en: '' # don't prefix URLs for En, the default locale
+        #fr: '/fr'
+    #name_prefix: app_
+
 # kernel:
 #     resource: ../../src/Kernel.php
 #     type: annotation
