controller and error handler

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -20,3 +20,4 @@ framework:
         scoped_clients:
 
     default_locale: en
+    error_controller: App\Application\Controller\Error\AppErrorController
