--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,6 +18,13 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         public: false
 
+    
+    # Autowire interface
+    _instanceof:
+        App\Domain\Service\ServiceDomainInterface:
+            public: false
+            tags: ['service.my_tag']
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     #
@@ -57,8 +64,9 @@ services:
             $bind_from_service_logger: '@monolog.logger.doctrine'
             Psr\Log\LoggerInterface $httpClientLogger: '@monolog.logger.http_client'
             string $myCustomData: 'from services.yaml'
-            iterable $rules: !tagged_iterator '@doctrine.event_listener'
+            iterable $rules: !tagged_iterator 'service.my_tag'
 
+    # Bundle for github/phpext playground
     Bundle\ExtBundleController:
         tags: ['controller.service_arguments']
 
