--- a/config/services/custom.yml
+++ b/config/services/custom.yml
@@ -10,7 +10,14 @@ parameters:
 services:
     rot13:
         class:    App\Application\Service\Rot13Transformer
-        arguments: [false]
+        # https://symfony.com/doc/5.0/service_container/expression_language.html
+        # the '@=' prefix is required when using expressions for arguments in YAML files
+        # when using double-quoted strings, the backslash needs to be escaped twice (see https://yaml.org/spec/1.2/spec.html#id2787109)
+        # arguments: ["@=service('App\\\\Mail\\\\MailerConfiguration').getMailerMethod()"]
+        arguments: 
+            # - ['@=service("App\\Application\\Service\\Rot13Transformer")']
+            - "@=container.hasParameter('some_param') ? parameter('some_param') : false"
+            - 'both'
     
     twitter_client:
         class:    App\Application\Service\TwitterClient
