--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,11 +19,12 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         public: false
 
-    # Autowire interface
+    # Autowire interfaces and add tags to them
     _instanceof:
         App\Domain\Service\ServiceDomainInterface:
             public: false
             tags: ['service.my_tag']
+            # tags sample: - { name: 'app.mail_transport', alias: 'sendmail' }
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
