--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,19 @@
 # Docker
 DIRECTORY=/WEBSERVER/symfony5
 
+### >APP ENV ################ 
+#
+# .env (or .env.local)
+# composer dump-env prod
+# debug:container --env-vars foo --env-var=FOO
+# default :-
+# use EnvVarProcessorInterface
+#
+APP_ENV=dev
+APP_DEBUG=false
+SAMPLE_ENV=${APP_ENV:-default}sample
+### <APP ####################
+
 ###> sentry/sentry-symfony ###
 # SENTRY_DSN=
 ###< sentry/sentry-symfony ###
