--- a/.env.dist
+++ b/.env.dist
@@ -14,6 +14,12 @@ APP_DEBUG=false
 SAMPLE_ENV=${APP_ENV:-default}sample
 ### <APP ####################
 
+### >VAULT ####################
+# console secrets:generate-keys --env=dev (--rotate)
+# console secrets:set VARIABLE (or --random --local)
+# refer with '%env(VARIABLE)%'
+### <VAULT ####################
+
 ###> sentry/sentry-symfony ###
 # SENTRY_DSN=
 ###< sentry/sentry-symfony ###
