--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,8 @@
     },
     "autoload": {
         "classmap": [
-            "src/Kernel.php"
+            "src/Kernel.php",
+            "src/MicroKernelSample.php"
         ],
         "psr-4": {
             "App\\Application\\": "src/Application/",
