--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -24,3 +24,8 @@ framework:
 
     router:
         strict_requirements: true
+
+# secrets:
+    #vault_directory: '%kernel.project_dir%/config/secrets/%kernel.environment%'
+    #local_dotenv_file: '%kernel.project_dir%/.env.%kernel.environment%.local'
+    #decryption_env_var: 'base64:default::SYMFONY_DECRYPTION_SECRET'
