--- a/config/services/knp/knp_menu.yml
+++ b/config/services/knp/knp_menu.yml
@@ -4,6 +4,7 @@ knp_menu:
     # use "twig: false" to disable the Twig extension and the TwigRenderer
     twig:
         template: my_knp_menu.html.twig
+        # param_sample: '%kernel.debug%'
 
     #  if true, enables the helper for PHP templates
     templating: false
