--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -11,7 +11,8 @@ framework:
         cookie_secure: auto
         cookie_samesite: lax
 
-    #esi: true
+    esi: true # { enabled: true }
+    
     #fragments: true
     php_errors:
         log: true
