--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -7,9 +7,12 @@ framework:
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
-        handler_id: null
         cookie_secure: auto
         cookie_samesite: lax
+
+        # session in database 2/2 (service.yml)
+        # handler_id: Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler
+        handler_id: null
 
     esi: true # { enabled: true }
     
@@ -33,3 +36,5 @@ framework:
     #vault_directory: '%kernel.project_dir%/config/secrets/%kernel.environment%'
     #local_dotenv_file: '%kernel.project_dir%/.env.%kernel.environment%.local'
     #decryption_env_var: 'base64:default::SYMFONY_DECRYPTION_SECRET'
+
+    
